# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.190 2005/03/09 20:03:12 wolf31o2 Exp $

  09 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/isolinux-2.11-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-2.11-memtest86+-cdtar.tar.bz2,
  livecd/runscript/ppc-archscript.sh:
  Alright, so I lied to you. This is now the 1.1.7 release. I removed the 2.11
  isolinux cdtar tarballs and updated the ppc-archscript.sh to use the
  livecd/volid for the HFS volid, too.

  09 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Calling this one 1.1.7 and rolling a tarball.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/ppc-archscript.sh, livecd/runscript/sparc-archscript.sh,
  -livecd/runscript/sparc64-archscript.sh,
  livecd/runscript/x86-archscript.sh, modules/livecd_stage2_target.py:
  Added livecd/volid to set the volume ID when creating the ISO, patch by
  Gustavo Zacarias <gustavoz@gentoo.org>. Also copied sparc64-archscript.sh to
  sparc-archscript.sh and removing sparc64 one, as they are identical now.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/cdtar/isolinux-2.13-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.13-memtest86+-cdtar.tar.bz2:
  Adding experimental isolinux cdtar for isolinux 2.13 and memtest86+ 1.51.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Removed hdparm from default runlevel as it break ide=nodma at boot.

  07 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh:
  Revert last set of changes and remove portage version check from emerge in
  livecd-stage1, as it breaks catalyst's ability to fail properly on an